# namada

./: Cargo.toml
apps/: Cargo.toml
apps/src/lib/: cli.rs
apps/src/lib/client/: rpc.rs  signing.rs  tx.rs  types.rs  utils.rs
apps/src/lib/config/: genesis.rs
apps/src/lib/config/genesis/: chain.rs  templates.rs
apps/src/lib/node/ledger/: mod.rs  tendermint_node.rs
apps/src/lib/node/ledger/ethereum_node/oracle/: config.rs  mod.rs
apps/src/lib/node/ledger/shell/: finalize_block.rs  governance.rs  init_chain.rs  mod.rs  prepare_proposal.rs  process_proposal.rs  queries.rs
apps/src/lib/node/ledger/shims/: abcipp_shim.rs
apps/src/lib/node/ledger/storage/: mod.rs
apps/src/lib/wallet/: mod.rs  store.rs
core/: Cargo.toml
core/src/ledger/: testnet_pow.rs
core/src/ledger/ibc/: actions.rs  data.rs  storage.rs
core/src/ledger/storage/: mod.rs  wl_storage.rs  write_log.rs
core/src/ledger/storage_api/: mod.rs  token.rs
core/src/ledger/storage_api/collections/: lazy_map.rs
core/src/proto/: types.rs
core/src/types/: address.rs  ibc.rs  storage.rs  time.rs  token.rs
core/src/types/key/: common.rs  ed25519.rs  mod.rs  secp256k1.rs
core/src/types/token/: parameters.rs
core/src/types/transaction/: mod.rs  wrapper.rs
documentation/docs/src/testnets/: pre-genesis-validator.md  run-your-genesis-validator.md  running-a-full-node.md
documentation/specs/src/: SUMMARY.md
documentation/specs/src/base-ledger/: governance.md
ethereum_bridge/src/protocol/transactions/ethereum_events/: events.rs
genesis/: dev.toml  e2e-tests-single-node.toml
proof_of_stake/: Cargo.toml
proof_of_stake/src/: epoched.rs  epoched_new.rs  lib.rs  parameters.rs  storage.rs  tests.rs  types.rs  validation.rs
shared/: Cargo.toml
shared/src/ledger/ibc/vp/: channel.rs  client.rs  connection.rs  denom.rs  mod.rs  packet.rs  port.rs  sequence.rs  token.rs
shared/src/ledger/native_vp/governance/: mod.rs  utils.rs
shared/src/ledger/pos/: mod.rs  vp.rs
shared/src/ledger/protocol/: mod.rs
shared/src/ledger/queries/: mod.rs  router.rs  shell.rs  types.rs
shared/src/ledger/queries/vp/: pos.rs
shared/src/vm/: host_env.rs
shared/src/vm/wasm/: run.rs
tests/: Cargo.toml
tests/src/e2e/: eth_bridge_tests.rs  helpers.rs  ledger_tests.rs  setup.rs
tests/src/e2e/eth_bridge_tests/: helpers.rs
tests/src/native_vp/: pos.rs
tests/src/vm_host_env/: ibc.rs  mod.rs  tx.rs  vp.rs
tx_prelude/: Cargo.toml
tx_prelude/src/: governance.rs  lib.rs  proof_of_stake.rs
vp_prelude/: Cargo.toml
vp_prelude/src/: lib.rs
wasm/: Cargo.toml  checksums.json
wasm/wasm_source/: Cargo.toml
wasm/wasm_source/src/: tx_bond.rs  tx_change_validator_commission.rs  tx_init_validator.rs  tx_unbond.rs  tx_withdraw.rs  vp_implicit.rs  vp_masp.rs  vp_testnet_faucet.rs  vp_user.rs  vp_validator.rs
wasm_for_tests/: tx_memory_limit.wasm  tx_mint_tokens.wasm  tx_proposal_code.wasm  tx_read_storage_key.wasm  tx_write.wasm  tx_write_storage_key.wasm  vp_always_false.wasm  vp_always_true.wasm  vp_eval.wasm  vp_memory_limit.wasm  vp_read_storage_key.wasm
wasm_for_tests/wasm_source/: Cargo.toml
