[package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2021"
license = "GPL-3.0"
name = "namada_core"
resolver = "2"
version = "0.12.1"

[features]
default = []
ferveo-tpke = [
  "ferveo",
  "tpke",
  "ark-ec",
  "rand_core",
  "rand",
]
wasm-runtime = [
  "rayon",
]
# secp256k1 key signing and verification, disabled in WASM build by default as 
# it bloats the build a lot
secp256k1-sign-verify = [
  "libsecp256k1/hmac",
]

abcipp = [
  "ibc-proto-abcipp",
  "ibc-abcipp",
  "tendermint-abcipp",
  "tendermint-proto-abcipp"
]
abciplus = [
  "ibc",
  "ibc-proto",
  "tendermint",
  "tendermint-proto",
]

ibc-mocks = [
  "ibc/mocks",
]
ibc-mocks-abcipp = [
  "ibc-abcipp/mocks",
]

# for integration tests and test utilies
testing = [
  "rand",
  "rand_core",
  "proptest",
]

[dependencies]
ark-bls12-381 = {version = "0.3"}
ark-ec = {version = "0.3", optional = true}
ark-serialize = {version = "0.3"}
# We switch off "blake2b" because it cannot be compiled to wasm
# branch = "bat/arse-merkle-tree"
arse-merkle-tree = {package = "sparse-merkle-tree", git = "https://github.com/heliaxdev/sparse-merkle-tree", rev = "5f0036df3ff8141dc1f88c79754a93cf8ac1f103", default-features = false, features = ["std", "borsh"]}
bech32 = "0.8.0"
bellman = "0.11.2"
borsh = "0.9.0"
chrono = {version = "0.4.22", default-features = false, features = ["clock", "std"]}
data-encoding = "2.3.2"
derivative = "2.2.0"
ed25519-consensus = "1.2.0"
ferveo = {optional = true, path = "../../ferveo/ferveo"}
ferveo-common = {path = "../../ferveo/ferveo-common"}
tpke = {package = "group-threshold-cryptography", optional = true, path = "../../ferveo/tpke"}
# TODO using the same version of tendermint-rs as we do here.
ibc = {version = "0.23.0", default-features = false, optional = true}
ibc-proto = {version = "0.23.0", default-features = false, optional = true}
ibc-abcipp = {package = "ibc", git = "https://github.com/heliaxdev/cosmos-ibc-rs", rev = "a0d80dca78421a0bc6d5f000b97a8453b0251dbf", default-features = false, optional = true}
ibc-proto-abcipp = {package = "ibc-proto", git = "https://github.com/heliaxdev/ibc-proto-rs", rev = "10d317c6f174e2d0f4f1b31a562edcf28d737309", default-features = false, optional = true}
ics23 = "0.8.1"
index-set = {git = "https://github.com/heliaxdev/index-set", tag = "v0.7.1", features = ["serialize-borsh", "serialize-serde"]}
itertools = "0.10.0"
libsecp256k1 = {git = "https://github.com/heliaxdev/libsecp256k1", rev = "bbb3bd44a49db361f21d9db80f9a087c194c0ae9", default-features = false, features = ["std", "static-context"]}
masp_primitives = { git = "https://github.com/anoma/masp", rev = "bee40fc465f6afbd10558d12fe96eb1742eee45c" }
proptest = {git = "https://github.com/heliaxdev/proptest", branch = "tomas/sm", optional = true}
prost = "0.11"
prost-types = "0.11"
rand = {version = "0.8", optional = true}
rand_core = {version = "0.6", optional = true}
rayon = {version = "=1.5.3", optional = true}
rust_decimal = { version = "1.26.1", features = ["borsh"] }
rust_decimal_macros = "1.26.1"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.62"
sha2 = "0.9.3"
tendermint = {version = "0.23.6", optional = true}
tendermint-proto = {version = "0.23.6", optional = true}
tendermint-abcipp = {package = "tendermint", git = "https://github.com/heliaxdev/tendermint-rs", rev = "a3a0ad5f07d380976bbd5321239aec9cc3a8f916", optional = true}
tendermint-proto-abcipp = {package = "tendermint-proto", git = "https://github.com/heliaxdev/tendermint-rs", rev = "a3a0ad5f07d380976bbd5321239aec9cc3a8f916", optional = true}
thiserror = "1.0.37"
tracing = "0.1.30"
zeroize = {version = "1.5.5", features = ["zeroize_derive"]}

[dev-dependencies]
assert_matches = "1.5.0"
libsecp256k1 = {git = "https://github.com/heliaxdev/libsecp256k1", rev = "bbb3bd44a49db361f21d9db80f9a087c194c0ae9"}
pretty_assertions = "0.7.2"
# A fork with state machine testing
proptest = {git = "https://github.com/heliaxdev/proptest", branch = "tomas/sm"}
rand = {version = "0.8"}
rand_core = {version = "0.6"}
test-log = {version = "0.2.7", default-features = false, features = ["trace"]}
tracing-subscriber = {version = "0.3.7", default-features = false, features = ["env-filter", "fmt"]}

[build-dependencies]
tonic-build = "0.6.0"
